--- a/main.css
+++ b/main.css
@@ -6,12 +6,14 @@
             display:flex;
             justify-content: center;
             align-items: flex-start;
+            height: 400px;
         }
         .container{
             display:flex;
             flex-wrap: wrap;
             flex: 0 1 60%;
             min-width:400px;
+          
         }
 
         .buttons,.result{
@@ -24,9 +26,9 @@
             border: 1px solid black;
             justify-content: flex-end;
             align-items: center;
-            font-size: 1.5em;
-            background: #000;
-            color:#fff;
+            font-size: 170%;
+            background: rgb(0, 0, 0);
+            color:rgb(255, 255, 255);
             padding:0 10px;
         }
         .button{
@@ -36,19 +38,17 @@
             align-items: center;
             height: 50px;
             border: 1px solid black;
-            border-top:none;
-            border-left:none;
             cursor: pointer;
             background: -webkit-linear-gradient(top,#0913a5,rgb(12, 0, 0));
-            font-size:2em;
-            color: white;
+            font-size:175%;
+            color: rgb(244, 248, 244);
         }
         .button:nth-child(4n+1){
             border-left: 1px solid black;
         }
         .button:nth-child(4n),.button:last-child{
             background: -webkit-linear-gradient(top, #252527, rgb(10, 0, 0));
-            color: #fff;
+            color: rgb(252, 253, 252);
         }
         .zero-btn{
             flex-grow: 2;
